base/services/ms-product/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-product
  labels:
    app: ms-product
    app.kubernetes.io/name: ms-product
spec:
  type: ClusterIP
  ports:
    - port: 3002
      targetPort: 3002
      protocol: TCP
      name: http
  selector:
    app: ms-product
